--- a/style/style.css
+++ b/style/style.css
@@ -3,17 +3,25 @@ body {
     flex-direction: column;
     width: 100%;
     min-height: 100vh;
+
+    margin: 0 auto;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+    background-color: #fff;
 }
 
 header {
-
+    max-width: 72rem;
+    margin: 0 auto;
     position: fixed;
     z-index: 999;
     background-color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 20rem;
     padding: 0.5rem 3rem;
     height: 3rem;
     top: 0;
@@ -21,6 +29,12 @@ header {
     left: 0;
     border-bottom: 3px solid #000;
     flex-shrink: 0;
+}
+
+iframe {
+    width: 100%;
+    height: 150px;
+    margin: 2rem auto;
 }
 
 header a {
@@ -52,9 +66,41 @@ nav li {
     padding: 0.5rem;
 }
 
+
+.menu-btn {
+    width: 30px;
+    height: 30px;
+    position: relative;
+
+}
+
+.menu-btn span {
+    width: 30px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #000;
+}
+
+.menu-btn span:nth-of-type(2) {
+    top: calc(50% - 5px);
+}
+
+.menu-btn span:nth-of-type(3) {
+    top: calc(50% + 5px);
+}
+
+.right-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 main {
     padding-top: 3rem;
-    max-width: 60rem;
+    max-width: 72rem;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -80,7 +126,7 @@ h2 {
 }
 
 .left {
-    margin-top: 10rem;
+    margin-top: 2rem;
 }
 
 .left article {
@@ -152,8 +198,44 @@ footer a {
     color: #fff;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1200px) {
+
+    header,
+    main {
+        max-width: 60rem;
+    }
+}
+
+@media screen and (max-width: 992px) {
     nav {
         display: none;
+    }
+
+    header,
+    main,
+    .left,
+    .right {
+        max-width: 45rem;
+        margin: 0 auto;
+    }
+
+    main {
+        display: block;
+    }
+
+    .opinions {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+
+    main,
+    header,
+    .left,
+    .right {
+        max-width: 32rem;
     }
 }
